# YHmanoid

./: README.md
output/: base_ekf.txt  base_gt.txt  base_orbslam.txt  com_gt.txt  com_kf.txt  com_kin.txt  evo命令.txt
output/1219/: base_ekf.txt  base_ekf（复件）.txt  base_gt.txt  base_gt（复件）.txt  base_orbslam.txt  base_orbslam（复件）.txt
output/mpc/: data_mpc.txt  data_ol.txt  data_xy.txt
src/bipedv5/: CMakeLists.txt
src/bipedv5/config/: display.rviz  drive_gz.yaml  joint_params copy.yaml  joint_params.yaml
src/bipedv5/include/bipedv5/: drive_gz.h  robotDyn.h  sensor.h
src/bipedv5/launch/: display.launch  drive.launch  gazebo.launch  test.launch
src/bipedv5/meshes/: base_link.STL  left_ankle_Link.STL  left_ankle_pri_Link.STL  left_hip_Link.STL  left_knee_Link.STL  left_knee_pri_Link.STL  left_yaw_Link.STL  right_ankle_Link.STL  right_ankle_pri_Link.STL  right_hip_Link.STL  right_knee_Link.STL  right_knee_pri_Link.STL  right_yaw_Link.STL
src/bipedv5/rviz/: view.rviz
src/bipedv5/scripts/: command.py  command2.py  command_turn.py
src/bipedv5/src/: drive_gz.cpp  ini_cam_pose.cpp  key.cpp  sensor(ft).cpp  sensor(origin).cpp  sensor.cpp
src/bipedv5/urdf/: bipedv5 copy.urdf  bipedv5.sdf  bipedv5.urdf  bipedv5_1031.urdf
src/bipedv5/worlds/: indoor1.world  stair.world
src/bipedv5/xacro/: gazebo(ft).xacro  gazebo.xacro  my_camera.xacro  robot(ft).xacro  robot.xacro  transmission.xacro
src/bipedv5_bringup/: CMakeLists.txt  package.xml
src/bipedv5_bringup/launch/: lipm_mpc.launch  lipm_walk.launch  motor_read.launch  slam_test.launch  step_bezier.launch  step_gazebo_bezier.launch  step_gazebo_htwalk.launch  step_gazebo_static.launch  step_htwalk.launch  step_static.launch  walk_test.launch
src/bipedv5_control/: CMakeLists.txt  package.xml
src/bipedv5_control/config/: biped_bezier_params.yaml  biped_gazebo_bezier_params.yaml  biped_gazebo_htwalk_params.yaml  biped_gazebo_static_params.yaml  biped_htwalk_params.yaml  biped_static_params.yaml
src/bipedv5_control/data/: swingfoot_data.txt
src/bipedv5_control/include/bipedv5_control/: Interpolation.h  cubic_spline.h  drive.h  drive_gazebo.h  foot_traj copy.h  foot_traj.h  inv_kine.h  key.h  leg.h  motor_read.h  swingfoot_trajectory.h  traj_generation.h
src/bipedv5_control/scripts/: plot_result.py  swingfoot_plot.py
src/bipedv5_control/src/: cubic_spline.cpp  drive.cpp  drive_gazebo.cpp  inv_kine.cpp  leg.cpp  motor_read.cpp  odom.cpp  save_data.cpp  swingfoot_test.cpp  swingfoot_trajectory.cpp
src/imu/: CMakeLists.txt  package.xml
src/imu/launch/: imu.launch  imu_display.launch  imu_rviz.launch
src/imu/scripts/: display_3D_visualization.py  wit_imu_ctrl.py  wit_normal_ros.py
src/state_estimate/: CMakeLists.txt  package.xml
src/state_estimate/cfg/: VarianceControl.cfg
src/state_estimate/config/: estimation_params.yaml  multisensor_fusion_params.yaml
src/state_estimate/include/state_estimate/: CoMLKF.h  ContactDetection.h  ContactEKF.h  IMUEKF.h  JointDF.h  Mahony.h  deadReckoning.h  humanoid_ekf.h  multisensor_fusion.h  robotDyn.h
src/state_estimate/launch/: estimate.launch  estimate_serow.launch
src/state_estimate/share/: hse.rviz
src/state_estimate/src/: CoMEKF.cpp  CoMLKF.cpp  ContactEKF.cpp  IMUEKF.cpp  IMUinEKF.cpp  IMUinEKFQuad.cpp  JointDF.cpp  MovingAverageFilter.cpp  butterworthHPF.cpp  butterworthLPF.cpp  differentiator.cpp  humanoid_ekf.cpp  multisensor_fusion copy.cpp  multisensor_fusion.cpp  multisensor_fusion_driver.cpp  serow_driver.cpp
